--- a/kafka-producer-wikimedia/pom.xml
+++ b/kafka-producer-wikimedia/pom.xml
@@ -46,6 +46,13 @@
             <version>4.10.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.launchdarkly/okhttp-eventsource -->
+        <dependency>
+            <groupId>com.launchdarkly</groupId>
+            <artifactId>okhttp-eventsource</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
 
     </dependencies>
 
